2001-01-23  Akim Demaille  <akim@epita.fr>

	* vtexi.test: Also check that stamp-vti properly depends upon
	configure.in and the Texinfo source file.

2001-01-21  Kevin Ryde <user42@zip.com.au>

	* colon7.test: Grep for a couple of AC_OUTPUT problems.

2001-01-15  Tom Tromey  <tromey@redhat.com>

	* subdir3.test: Allow any number of dependencies.

	* subobj4.test: Fixed test case.

	* amassign.test: New file.
	* Makefile.am (TESTS): Added new file.

2001-01-12  Tom Tromey  <tromey@redhat.com>

	* subobj4.test: New file.
	* Makefile.am (TESTS): Added subobj4.test.

	* cxxansi.test: New file.
	* Makefile.am (TESTS): Added cxxansi.test.

2000-12-21  Tom Tromey  <tromey@redhat.com>

	* vtexi.test: Fixed to reflect new rules.

2000-12-17  Tom Tromey  <tromey@redhat.com>

	* Makefile.am (XFAIL_TESTS): Don't mention ldflags.test.

2000-11-25  Tom Tromey  <tromey@cygnus.com>

	* space.test: New file.
	* Makefile.am (TESTS): Added space.test.

2000-11-23  Pavel Roskin  <proski@gnu.org>

	* pr87.test: Prevent automake from looking into .. and ../..
	by using AC_CONFIG_AUX_DIR(.) in configure.in.

2000-11-23  Tom Tromey  <tromey@cygnus.com>

	* pr87.test: New file.  From PR automake/87.
	* Makefile.am (TESTS): Added pr87.test.

2000-10-17  Pavel Roskin  <proski@gnu.org>

	* Makefile.am (TESTS): Added aclocali1.test.
	* aclocali1.test: New file.

2000-08-30  Tom Tromey  <tromey@cygnus.com>

	* Makefile.am (XFAIL_TESTS): Removed pr72.test.

	For PR automake/72:
	* Makefile.am (TESTS): Added pr72.test.
	(XFAIL_TESTS): Likewise.
	* pr72.test: New file.

2000-08-28  Tom Tromey  <tromey@cygnus.com>

	* Makefile.am (XFAIL_TESTS): Added ldflags.test.

2000-08-27  Tom Tromey  <tromey@cygnus.com>

	For PR automake/75:
	* Makefile.am (TESTS): Added fortdep.test.
	* fortdep.test: New file.

	For PR automake/68:
	* Makefile.am (TESTS): Added header.test.
	* header.test: New file.

2000-08-26  Tom Tromey  <tromey@cygnus.com>

	For PR automake/73: