@@ -33,4 +33,4 @@ grep '^textutils\.info: textutils\.texi .*version\.texi$' Makefile.in
 # @CONFIGURE_AC@ was not properly substitued.
 
 egrep '^\$\(srcdir\)/stamp-vti:.*textutils\.texi( .*)?$' Makefile.in
-egrep '^\$\(srcdir\)/stamp-vti:.*$\(top_srcdir\)/configure\.in( .*)?$' Makefile.in
+egrep '^\$\(srcdir\)/stamp-vti:.*\$\(top_srcdir\)/configure\.in( .*)?$' Makefile.in
