@@ -1,3 +1,7 @@
+2001-01-24  Akim Demaille  <akim@epita.fr>
+
+	* vtexi.test (info_TEXINFOS): Escape a $ in egrep pattern.
+
 2001-01-23  Akim Demaille  <akim@epita.fr>
 
 	* vtexi.test: Also check that stamp-vti properly depends upon
